<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:id="@+id/MainLayout"
	android:orientation="vertical"
	android:gravity="center"
	android:background="@drawable/background">
	<LinearLayout
		android:orientation="vertical"
		android:layout_margin="20px"
		android:gravity="center"
		android:layout_height="wrap_content"
		android:id="@+id/linearLayout1"
		android:layout_width="fill_parent">
		<Button
			android:id="@+id/AlarmSystemButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/AlarmSystemButtonText"
			android:drawableTop="@drawable/alarm"></Button>
		<Button
			android:id="@+id/FireAndGasAlarmButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/FireAndGasAlarmButtonText"
			android:drawableTop="@drawable/fire"></Button>
		<Button
			android:id="@+id/DoorSystemButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/DoorsButtonText"
			android:drawableTop="@drawable/padlock"></Button>
		<Button
			android:id="@+id/HeatingButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/HeatingButtonText"
			android:drawableTop="@drawable/heating"></Button>
		<Button
			android:id="@+id/SaunaButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/SaunaButtonText"
			android:drawableTop="@drawable/sauna"></Button>
		<Button
			android:id="@+id/RequestStatusUpdateButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/RequestStatus"
			android:drawableTop="@drawable/misc_settings"></Button>
	</LinearLayout>


</LinearLayout>
